tests/compile_errors/029-label-not-found.buzz
// Label `somewhere` does not exists.
test "using a label that does not exists" {
	while (true) {
		break somewhere;
	}
}
